# trial-info-sponsor-site

./: .gitignore  GIPR-Target-Pipeline-Updated.xlsx  GIPR-Target-Pipeline.xlsx  GPR75-Target-Pipeline-Updated.xlsx  GPR75-Target-Pipeline.xlsx  GUCY1A1-Target-Pipeline-Updated.xlsx  GUCY1A1-Target-Pipeline.xlsx  biomarin_pipeline.json  drugAndDiseaseTarget.txt  drug_target_resolution_results.json  enriched_GIPR_pipeline.xlsx  excelUnique.py  extraction.py  main.py  missing_drugs_gipr.json  missing_drugs_gipr_aggregated.json  missing_drugs_gpr75_aggregated.json  missing_drugs_gucy1a1_aggregated.json  pyproject.toml  target_gipr_trials.json  target_glp-1r_trials.json  target_gucy1a1_trials.json  updated_GIPR_landscape.xlsx  updated_GUCY1A1_landscape.xlsx
baml_src/: clients.baml  extraction.baml  pipeline.baml
project-context/: COMPANY_INFO_SPEC.md
